Fixed form size on smaller screen

--- a/portfolio/src/app/pages/contact/contact.component.scss
+++ b/portfolio/src/app/pages/contact/contact.component.scss
@@ -17,3 +17,9 @@ mat-form-field {
     margin-left: 15px;
   }
 }
+
+@media (max-width: 767px) {
+  mat-form-field {
+    max-width: 90vw;
+  }
+}
